--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,16 @@
 # Flask
 # ----------------------
 flask
+Flask-WTF
+Flask-SQLAlchemy
+Flask-Migrate
+Flask-Login
+Flask-OpenId
+Flask-bootstrap==2.3.2.2
+Flask-nav
+Flask-debug
+psycopg2
+beautifulsoup4
 
 
 # ----------------------
